# self-organizing-transport-model

./: .gitmodules  README.md
sotm/cpp-sources/: CMakeLists.txt  build.sh  sotm.doxyfile  test.sh
sotm/cpp-sources/functional-tests/: CMakeLists.txt  coloring.sh  functional-testing.hpp  run-function-tests.sh
sotm/cpp-sources/functional-tests/determinism/: CMakeLists.txt  det-test.conf  determinism-test.sh
sotm/cpp-sources/functional-tests/gui/: CMakeLists.txt
sotm/cpp-sources/functional-tests/gui/animated-demo-graph/: CMakeLists.txt  animated-demo-graph-gui.cpp
sotm/cpp-sources/functional-tests/gui/electrostatics/: CMakeLists.txt  electrostatics-gui.cpp
sotm/cpp-sources/functional-tests/gui/static-graph/: CMakeLists.txt  static-graph-gui.cpp
sotm/cpp-sources/functional-tests/memory/: CMakeLists.txt  leak-test.sh
sotm/cpp-sources/functional-tests/memory/branching/: CMakeLists.txt  branching.cpp
sotm/cpp-sources/functional-tests/memory/simple-graph/: CMakeLists.txt  simple-graph.cpp
sotm/cpp-sources/libsotm/: CMakeLists.txt
sotm/cpp-sources/libsotm-gui/: CMakeLists.txt
sotm/cpp-sources/libsotm-gui/sotm-gui/: gui.hpp
sotm/cpp-sources/libsotm-gui/sotm-gui-internal/: RenderWindowUIMultipleInheritance.ui  animation-maker.hpp  async-iteration.hpp  frame-maker.hpp  graph-wireframe-drawer.hpp  gui-internal.hpp  render-preferences.hpp  visualizer-ui-window.hpp
sotm/cpp-sources/libsotm-gui/source/: animation-maker.cpp  async-iteration.cpp  frame-maker.cpp  graph-wireframe-drawer.cpp  gui.cpp  visualizer-ui-window.cpp
sotm/cpp-sources/libsotm-gui/ui/: RenderWindowUIMultipleInheritance.ui
sotm/cpp-sources/libsotm/sotm/base/: global-context.hpp  model-context.hpp  parallel.hpp  parameters.hpp  physical-payload.hpp  stepping-structure.hpp  time-iter.hpp  transport-graph.hpp
sotm/cpp-sources/libsotm/sotm/math/: distrib-gen.hpp  electric-emission.hpp  electromagnetic-emission.hpp  field.hpp  functions.hpp  generic.hpp  geometry.hpp  integration.hpp  random.hpp
sotm/cpp-sources/libsotm/sotm/optimizers/: coulomb-brute-force.hpp  coulomb-calculator.hpp  coulomb-octree.hpp  coulomb.hpp
sotm/cpp-sources/libsotm/sotm/output/: graph-drawer.hpp  graph-file-writer.hpp  graph-renderer.hpp  render-preferences.hpp  variables.hpp
sotm/cpp-sources/libsotm/sotm/payloads/demo/: absolute-random-graph.hpp  empty-payloads.hpp
sotm/cpp-sources/libsotm/sotm/payloads/electrostatics/: electrostatics-scaler.hpp  electrostatics-simple.hpp  electrostatics.hpp
sotm/cpp-sources/libsotm/sotm/time-iter/: euler-explicit.hpp  runge-kutta.hpp
sotm/cpp-sources/libsotm/sotm/utils/: assert.hpp  const.hpp  macros.hpp  memory.hpp  string.hpp  utils.hpp
sotm/cpp-sources/libsotm/source/base/: model-context.cpp  parallel.cpp  parameters.cpp  physical-payload.cpp  stepping-structure.cpp  time-iter.cpp  transport-graph.cpp
sotm/cpp-sources/libsotm/source/math/: distrib-gen.cpp  electric-emission.cpp  electromagnetic-emission.cpp  functions.cpp  generic.cpp  geometry.cpp  integration.cpp  random.cpp
sotm/cpp-sources/libsotm/source/optimizers/: coulomb-brute-force.cpp  coulomb-octree.cpp  coulomb.cpp
sotm/cpp-sources/libsotm/source/output/: graph-drawer.cpp  graph-file-writer.cpp  graph-renderer.cpp  variables.cpp
sotm/cpp-sources/libsotm/source/time-iter/: euler-explicit.cpp  runge-kutta.cpp
sotm/cpp-sources/lightning-modeller/: CMakeLists.txt  config.hpp.in  coulomb-selector.cpp  coulomb-selector.hpp  emission-writer.cpp  emission-writer.hpp  gen-config.sh  main.cpp  modeller.cpp  modeller.hpp  parameters.ini  plot-field-all.sh  plot-field.sh  seeds-generator.cpp  seeds-generator.hpp
sotm/cpp-sources/unit-tests/: CMakeLists.txt
sotm/cpp-sources/unit-tests/libsotm-ut/: CMakeLists.txt
sotm/cpp-sources/unit-tests/libsotm-ut/base/: transport-graph-ut.cpp
sotm/cpp-sources/unit-tests/libsotm-ut/complex/: branching-trivial-physics.hpp  branching-ut.cpp
sotm/cpp-sources/unit-tests/libsotm-ut/math/: distrib-gen-ut.cpp  electromagnetic-emission-ut.cpp  field-ut.cpp  functions-ut.cpp  generic-ut.cpp  geometry-ut.cpp  integration-ut.cpp  plot-emission.py
sotm/cpp-sources/unit-tests/libsotm-ut/output/: variables-ut.cpp
sotm/cpp-sources/unit-tests/libsotm-ut/time-iter/: euler-explicit-ut.cpp  exponent-time-iterable.cpp  exponent-time-iterable.hpp  runge-kutta-ut.cpp  time-iterator-tester.cpp  time-iterator-tester.hpp
sotm/cpp-sources/unit-tests/libsotm-ut/utils/: memory-ut.cpp
sotm/cpp-sources/unit-tests/lightning-modeller-ut/: CMakeLists.txt  coulomb-selector-ut.cpp
sotm/cpp-sources/utilities/: CMakeLists.txt
sotm/cpp-sources/utilities/field-calculator/: CMakeLists.txt  field-calculator.cpp  field-calculator.hpp  grid-builder.cpp  grid-builder.hpp  main.cpp
sotm/cpp-sources/utilities/links-finder/: links-finder.cpp  links-finder.hpp  main.cpp
sotm/cpp-sources/visualizer/: CMakeLists.txt  graph-wireframe-drawer.cpp  graph-wireframe-drawer.hpp  visualizer-ui-window-driver.cpp  visualizer-ui-window.cpp  visualizer-ui-window.hpp
stepping-modeller/cpp-sources/libstepmod/: CMakeLists.txt  libsource.cpp
stepping-modeller/cpp-sources/libstepmod/source/base/: physical-payload.cpp  stepping-structure.cpp
stepping-modeller/cpp-sources/libstepmod/source/math/: geometry.cpp
stepping-modeller/cpp-sources/libstepmod/stepmod/base/: branch-point.hpp  channel.hpp  global-context.hpp  physical-context.hpp  physical-payload.hpp  stepping-structure.hpp  time-iter.hpp
stepping-modeller/cpp-sources/libstepmod/stepmod/math/: geometry.hpp
stepping-modeller/cpp-sources/libstepmod/stepmod/utils/: macros.hpp  memory.hpp
stepping-modeller/cpp-sources/unit-tests/: CMakeLists.txt  libtest.cpp
stepping-modeller/cpp-sources/unit-tests/libmathutils-ut/: CMakeLists.txt
stepping-modeller/cpp-sources/unit-tests/libmathutils-ut/geometry-ut/: CMakeLists.txt
stepping-modeller/cpp-sources/unit-tests/libstepmod-ut/: CMakeLists.txt
stepping-modeller/cpp-sources/unit-tests/libstepmod-ut/math/: geometry-ut.cpp
stepping-modeller/cpp-sources/unit-tests/libstepmod-ut/utils/: memory-ut.cpp
(+12 files in other folders)
